moved everything into include folder

--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -25,9 +25,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta property="og:title" content="PKGamma Digital Agency" />
-        <meta property="og:description" content="PKGamma is a digital agency
-            with roots in San Francisco and Taipei. We generate terrific value
-            for businesses through creative design." />
+        <meta property="og:description" content="{{description}}" />
         <meta property="og:url" content="https://pkgamma.com/" />
         <meta property="og:image" content="share.jpg" />
         <meta property="og:type" content="website" />
@@ -128,7 +126,7 @@
                 <h1 class="logo">
                     <a
                         href="https://pkgamma.com/">
-                    <img src="logo.png"
+                    <img src="img/logo.png"
                         alt="PKGamma Digital
                         Agency">
                     </a>
@@ -156,7 +154,7 @@
             <header class="hero hero--home">
                 <div class="hero__content
                     fadeUp">
-                    <h2 class="h1">We generate
+                    <h2 class="h1">{{title}} generate
                         terrific value for
                         businesses</br>through
                         creative design.
@@ -190,19 +188,19 @@
                                     <source
                                         media="(min-width:
                                         1450px)"
-                                        srcset="pro/1/big.jpg">
+                                        srcset="img/1/big.jpg">
                                     <source
                                         media="(min-width:
                                         800px)"
-                                        srcset="pro/1/big.jpg,
-                                        pro/1/big.jpg
+                                        srcset="img/1/big.jpg,
+                                        img/1/big.jpg
                                         2x">
                                     <source
                                         media="(max-width:
                                         450px)"
-                                        srcset="pro/1/big.jpg">
+                                        srcset="img/1/big.jpg">
                                     <img
-                                        src="pro/1/big.jpg"
+                                        src="img/1/big.jpg"
                                         alt="Project" />
                                 </picture>
                                 <div
@@ -226,15 +224,15 @@
                                 <picture>
                                     <source media="(min-width:
                                         1450px)"
-                                        srcset="pro/2/big.jpg">
+                                        srcset="img/2/big.jpg">
                                     <source media="(min-width:
                                         800px)"
-                                        srcset="pro/2/big.jpg,
-                                        pro/2/big.jpg 2x">
+                                        srcset="img/2/big.jpg,
+                                        img/2/big.jpg 2x">
                                     <source media="(max-width:
                                         450px)"
-                                        srcset="pro/2/big.jpg">
-                                    <img src="pro/2/big.jpg"
+                                        srcset="img/2/big.jpg">
+                                    <img src="img/2/big.jpg"
                                         alt="Project" />
                                 </picture>
                                 <div class="projectThumb__info">
