--- a/index.njk
+++ b/index.njk
@@ -1,4 +1,5 @@
 ---
 layout: layouts/index.njk
 title: 123
+description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
 ---
