--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -29,8 +29,9 @@
         <meta property="og:url" content="https://pkgamma.com/" />
         <meta property="og:image" content="share.jpg" />
         <meta property="og:type" content="website" />
-        <!-- CSS -->
-        <link rel="stylesheet" media="screen" href="build/css/production.css" />
+
+        <style>{% include "style.css" %}</style>
+
         <script>
             (function (i, s, o, g, r, a, m) {
                 i['GoogleAnalyticsObject'] = r;
@@ -188,19 +189,19 @@
                                     <source
                                         media="(min-width:
                                         1450px)"
-                                        srcset="img/1/big.jpg">
+                                        srcset="img/1-thg.jpg">
                                     <source
                                         media="(min-width:
                                         800px)"
-                                        srcset="img/1/big.jpg,
-                                        img/1/big.jpg
+                                        srcset="img/1-thg.jpg,
+                                        img/1-thg.jpg
                                         2x">
                                     <source
                                         media="(max-width:
                                         450px)"
-                                        srcset="img/1/big.jpg">
+                                        srcset="img/1-thg.jpg">
                                     <img
-                                        src="img/1/big.jpg"
+                                        src="img/1-thg.jpg"
                                         alt="Project" />
                                 </picture>
                                 <div
@@ -224,15 +225,15 @@
                                 <picture>
                                     <source media="(min-width:
                                         1450px)"
-                                        srcset="img/2/big.jpg">
+                                        srcset="img/2-munual.jpg">
                                     <source media="(min-width:
                                         800px)"
-                                        srcset="img/2/big.jpg,
-                                        img/2/big.jpg 2x">
+                                        srcset="img/2-munual.jpg,
+                                        img/2-munual.jpg 2x">
                                     <source media="(max-width:
                                         450px)"
-                                        srcset="img/2/big.jpg">
-                                    <img src="img/2/big.jpg"
+                                        srcset="img/2-munual.jpg">
+                                    <img src="img/2-munual.jpg"
                                         alt="Project" />
                                 </picture>
                                 <div class="projectThumb__info">
@@ -350,8 +351,10 @@
         <span class="v-line v-line--right"></span>
         <!-- JQUERY -->
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+
         <!-- JAVASCRIPT -->
-        <script type="text/javascript" src="build/js/production.min.js"></script>
+        <script>{% include "production.min.js" %}</script>
+
         <!-- Facebook SDK for JavaScript -->
         <script>
             window.fbAsyncInit = function () {
