test local edit without local make, see what happens

--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,5 @@
 ---
 layout: layouts/index.njk
-title: 123
+title: 12dddd3
 description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
 ---
