--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -27,7 +27,7 @@
         <meta property="og:title" content="PKGamma Digital Agency" />
         <meta property="og:description" content="{{description}}" />
         <meta property="og:url" content="https://pkgamma.com/" />
-        <meta property="og:image" content="share.jpg" />
+        <meta property="og:image" content="img/share.jpg" />
         <meta property="og:type" content="website" />
 
         <style>{% include "style.css" %}</style>
