--- a/_includes/index.njk
+++ b/_includes/index.njk
@@ -30,7 +30,7 @@
         <meta property="og:image" content="img/share.jpg" />
         <meta property="og:type" content="website" />
 
-        <style>{% include "style.css" %}</style>
+        <link rel="stylesheet" media="screen" href="style.css" />
 
         <script>
             (function (i, s, o, g, r, a, m) {
@@ -353,7 +353,7 @@
         <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 
         <!-- JAVASCRIPT -->
-        <script>{% include "production.min.js" %}</script>
+        <script type="text/javascript" src="production.min.js"></script>
 
         <!-- Facebook SDK for JavaScript -->
         <script>
