--- a/index.njk
+++ b/index.njk
@@ -1,5 +1,7 @@
 ---
 layout: index.njk
-title: 12dddd3
+url: https://pkgamma.com
+title: PKGamma Digital Agency
 description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
+keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan
 ---
