changed more stuff

--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -149,11 +149,7 @@
             <header class="hero hero--home">
                 <div class="hero__content
                     fadeUp">
-                    <h2 class="h1">{{title}} generate
-                        terrific value for
-                        businesses</br>through
-                        creative design.
-                    </h2>
+                    <h2 class="h1">{{site_title_line}}</h2>
                     <div class="hero__para">
                         <div class="section
                             section--flushBottom">
