--- a/index.njk
+++ b/index.njk
@@ -1,8 +1,32 @@
 ---
-layout: index.njk
+layout: layouts/index.njk
+permalink: /index.html
+
 url: https://pkgamma.com
+lang_id: zh_TW
 title: PKGamma Digital Agency
 description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
 keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan
-site_title_line: We generate terrific value for businesses</br>through creative design.
+
+alt_language: 正體中文
+alt_language_url: https://pkgamma.com/tw
+
+title_line_1: We generate terrific value for businesses
+title_line_2: through creative design.
+
+subtitle_line_1: PKGamma is a digital agency with roots in San Francisco and Taipei.
+subtitle_line_2: We specializes in website design, development, e-commerce solutions, branding, and digital marketing.
+
+bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and of course, innovation.
+bottom_icon_1: Website Development
+bottom_icon_2: Branding
+bottom_icon_3: Digital Marketing
+
+contact_title: GET IN TOUCH
+contact_subtitle: Please contact us if you would like to work together.
+email: contact@pkgamma.com
+phone: +1 (347) 766 4206
+
+copyright: © 2016 PKGamma Digital Agency. All rights reserved.
+copyright_disclaimer: Copyright & Disclaimer Statement
 ---
