--- a/tw.njk
+++ b/tw.njk
@@ -2,30 +2,33 @@
 layout: layouts/index.njk
 permalink: /tw.html
 
-url: https://pkgamma.com
+url: https://pkgamma.com/tw
 lang_id: zh_TW
-title: PKGamma Digital Agency
+lang_id_html: zh-Hant
+
+title: PKGamma 數位機構
 description: PKGamma 是一個位於台北與美國舊金山的創意數位機構。我們專精於網頁設計、開發、電子商務解決方案、品牌塑造與數位行銷。
+keywords: PKGamma 數位機構, 數位機構, PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan
 
-alt_language: 正體中文
-alt_language_url: https://pkgamma.com/tw
+alt_language: English
+alt_language_url: https://pkgamma.com
 
-title_line_1: We generate terrific value for businesses
-title_line_2: through creative design.
+title_line_1: 我們透過創新設計
+title_line_2: 為中小企業創造超凡價值
 
-subtitle_line_1: PKGamma is a digital agency with roots in San Francisco and Taipei.
-subtitle_line_2: We specializes in website design, development, e-commerce solutions, branding, and digital marketing.
+subtitle_line_1: PKGamma 是一個位於台北與美國舊金山的創意數位機構。
+subtitle_line_2: 我們專精於網頁設計、開發、電子商務解決方案、品牌塑造與數位行銷。
 
-bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and of course, innovation.
-bottom_icon_1: Website Development
-bottom_icon_2: Branding
-bottom_icon_3: Digital Marketing
+bottom_title: 在 PKGamma，我們對所有精彩與創新的好點子皆有興趣，並會效率執行。
+bottom_icon_1: 網頁開發
+bottom_icon_2: 品牌塑造
+bottom_icon_3: 數位行銷
 
-contact_title: GET IN TOUCH
-contact_subtitle: Please contact us if you would like to work together.
+contact_title: 與我們聯繫
+contact_subtitle: 如果您有一個專案想談談的話，給我們發個短訊息就可以了，就這麼簡單！
 email: contact@pkgamma.com
 phone: +1 (347) 766 4206
 
-copyright: © 2016 PKGamma Digital Agency. All rights reserved.
-copyright_disclaimer: Copyright & Disclaimer Statement
+copyright: 著作權 © 2016 PKGamma 數位機構 (台灣)，版權所有。
+copyright_disclaimer: 閱讀版權與免責聲明。
 ---
