--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,9 @@ layout: layouts/index.njk
 permalink: /index.html
 
 url: https://pkgamma.com
-lang_id: zh_TW
+lang_id: en_US
+lang_id_html: en
+
 title: PKGamma Digital Agency
 description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
 keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan
@@ -28,5 +30,5 @@ email: contact@pkgamma.com
 phone: +1 (347) 766 4206
 
 copyright: © 2016 PKGamma Digital Agency. All rights reserved.
-copyright_disclaimer: Copyright & Disclaimer Statement
+copyright_disclaimer: Copyright & Disclaimer Statement.
 ---
