fixed some PH translation

--- a/ph.njk
+++ b/ph.njk
@@ -10,8 +10,8 @@ title: PKGamma Digital Agency
 description: PKGamma ay isang digital na ahensiya na may mga ugat sa San Francisco at Taipei. Bumubuo kami ng napakalakas na halaga para sa mga negosyo sa pamamagitan ng creative na disenyo.
 keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, disenyo, moderno, minimal, minimalist, disenyo ng web, web development, karanasan ng gumagamit, social media, digital na pagbabago, Taipei, Taiwan, TaipeiTaiwan
 
-alt_language: 正 體 中文
-alt_language_url: https://pkgamma.com/tw
+alt_language: English
+alt_language_url: https://pkgamma.com/en
 
 title_line_1: Nagtitinda kami ng napakalakas na halaga para sa mga negosyo
 title_line_2: sa pamamagitan ng creative na disenyo.
