update THAI translation (grammar)

--- a/th.njk
+++ b/th.njk
@@ -14,7 +14,7 @@ alt_language: English
 alt_language_url: https://pkgamma.com/en
 
 title_line_1: เราออกแบบด้วยนวัตกรรม
-title_line_2: การสร้างคุณค่าพิเศษให้กับ SMEs
+title_line_2: การสร้างคุณค่าพิเศษให้กับธุรกิจขนาดเล็ก
 
 subtitle_line_1: PKGamma เป็นเอเจนซี่ดิจิทัลเชิงสร้างสรรค์ที่อยู่ในไทเปและซานฟรานซิสโก
 subtitle_line_2: เรามีความเชี่ยวชาญในการออกแบบเว็บการพัฒนาโซลูชั่นอีคอมเมิร์ซการสร้างแบรนด์และการตลาดดิจิทัล
