updated language codes

--- a/ph.njk
+++ b/ph.njk
@@ -3,7 +3,7 @@ layout: layouts/index.njk
 permalink: /ph.html
 
 url: https://pkgamma.com
-lang_id: tl-PH
+lang_id: tl_PH
 lang_id_html: ph
 
 title: PKGamma Digital Agency
