--- a/th.njk
+++ b/th.njk
@@ -3,7 +3,7 @@ layout: layouts/index.njk
 permalink: /th.html
 
 url: https://pkgamma.com/th
-lang_id: th
+lang_id: th_TH
 lang_id_html: th
 
 title: PKGamma เอเจนซี่ดิจิตอล
