added Japanese and Korean translations

--- a/ph.njk
+++ b/ph.njk
@@ -2,7 +2,7 @@
 layout: layouts/index.njk
 permalink: /ph.html
 
-url: https://pkgamma.com
+url: https://pkgamma.com/ph
 lang_id: tl_PH
 lang_id_html: ph
 
@@ -29,6 +29,6 @@ contact_subtitle: Mangyaring makipag-ugnay sa amin kung nais mong magtulungan.
 email: contact@pkgamma.com
 phone: +1 (347) 766 4206
 
-copyright: © 2019 PKGamma Digital Agency. Lahat ng karapatan ay nakalaan.
+copyright: © 2019 PKGamma Digital Agency (Philippians). Lahat ng karapatan ay nakalaan.
 copyright_disclaimer: Pahayag ng Copyright & Disclaimer.
 ---
