--- a/th.njk
+++ b/th.njk
@@ -30,5 +30,5 @@ email: contact@pkgamma.com
 phone: +1 (347) 766 4206
 
 copyright: ลิขสิทธิ์© 2019 PKGamma เอเจนซี่ดิจิตอล (ไต้หวัน) สงวนลิขสิทธิ์
-Copyright_disclaimer: อ่านลิขสิทธิ์และข้อจำกัดความรับผิดชอบ
+copyright_disclaimer: อ่านลิขสิทธิ์และข้อจำกัดความรับผิดชอบ
 ---
