we specializes -> we specialize

--- a/index.njk
+++ b/index.njk
@@ -17,7 +17,7 @@ title_line_1: We generate terrific value for businesses
 title_line_2: through creative design.
 
 subtitle_line_1: PKGamma is a digital agency with roots in San Francisco and Taipei.
-subtitle_line_2: We specializes in website design, development, e-commerce solutions, branding, and digital marketing.
+subtitle_line_2: We specialize in website design, development, e-commerce solutions, branding, and digital marketing.
 
 bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and of course, innovation.
 bottom_icon_1: Website Development
