icons now use https, avoided mixed content warning

--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -9,8 +9,8 @@
         <![endif]-->
         <title>{{title}}</title>
 
-        <link rel="icon" href="http://philkuo.com/assets/web/favicon.ico" type="image/x-icon">
-        <link rel="shortcut icon" href="http://philkuo.com/assets/web/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://philkuo.com/assets/web/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://philkuo.com/assets/web/favicon.ico" type="image/x-icon">
         <meta name="description" content="{{description}}" />
         <meta name="keywords" content="{{keywords}}" />
         <meta name="apple-mobile-web-app-capable" content="yes">
