updated Facebook Chat SDK url

--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -348,7 +348,7 @@
                 }
                 js = d.createElement(s);
                 js.id = id;
-                js.src = "https://connect.facebook.net/{{lang_id}}/sdk.js";
+                js.src = "https://connect.facebook.net/{{lang_id}}/sdk/xfbml.customerchat.js";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
