changed startup page title to Startup Solutions

--- a/startups.njk
+++ b/startups.njk
@@ -6,7 +6,7 @@ url: https://pkgamma.com/startups
 lang_id: en_US
 lang_id_html: en
 
-title: PKGamma Digital Agency
+title: PKGamma Startup Solutions
 description: PKGamma is a creative agency located in Chicago. We help startups build a thriving digital presence that tells a story.
 keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan, startups, startup, new venture
 
