--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ lang_id: en_US
 lang_id_html: en
 
 title: PKGamma Digital Agency
-description: PKGamma is a digital agency with roots in San Francisco and Taipei. We generate terrific value for businesses through creative design.
+description: PKGamma is a creative agency located in the City of Chicago. We generate terrific value for businesses through creative design.
 keywords: PKGamma Digital Agency, PKGamma, Philip Kuo, 郭力銘, graphic design, graphic designer, design, modern, minimal, minimalist, web design, web development, user experience, social media, digital innovation, Taipei, Taiwan, TaipeiTaiwan
 
 alt_language: 正體中文
@@ -16,7 +16,7 @@ alt_language_url: https://pkgamma.com/tw
 title_line_1: We generate terrific value for businesses
 title_line_2: through creative design.
 
-subtitle_line_1: PKGamma is a digital agency with roots in San Francisco and Taipei.
+subtitle_line_1: PKGamma is a creative agency located in the City of Chicago.
 subtitle_line_2: We specialize in website design, development, e-commerce solutions, branding, and digital marketing.
 
 bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and of course, innovation.
