--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -330,34 +330,32 @@
         <!-- JAVASCRIPT -->
         <script type="text/javascript" src="build/production.min.js"></script>
 
-        <!-- Facebook SDK for JavaScript -->
+        <!-- Load Facebook SDK for JavaScript -->
+        <div id="fb-root"></div>
         <script>
-            window.fbAsyncInit = function () {
-                FB.init({
-                    appId: '1678638095724206',
-                    autoLogAppEvents: true,
-                    xfbml: true,
-                    version: 'v2.11'
-                });
-            };
-            
-            (function (d, s, id) {
-                var js, fjs = d.getElementsByTagName(s)[0];
-                if (d.getElementById(id)) {
-                    return;
-                }
-                js = d.createElement(s);
-                js.id = id;
-                js.src = "https://connect.facebook.net/{{lang_id}}/sdk/xfbml.customerchat.js";
-                fjs.parentNode.insertBefore(js, fjs);
-            }(document, 'script', 'facebook-jssdk'));
-        </script>
+        window.fbAsyncInit = function() {
+            FB.init({
+            xfbml            : true,
+            version          : 'v3.2'
+            });
+        };
 
-        <!-- Facebook Chat -->
-        <div class="fb-customerchat" page_id="187246008075413"
-            minimized="false">
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/{{lang_id}}/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
+
+        <!-- Your customer chat code -->
+        <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="187246008075413"
+        theme_color="#333333"
+        logged_in_greeting="Welcome to PKGamma. How can we help?"
+        logged_out_greeting="Welcome to PKGamma. How can we help?">
         </div>
-        <!-- Facebook Chat -->
         
     </body>
 </html>
