updated Chinese company location

--- a/cn.njk
+++ b/cn.njk
@@ -16,7 +16,7 @@ alt_language_url: https://pkgamma.com/en
 title_line_1: 我们透过创新设计
 title_line_2: 为中小企业创造超凡价值
 
-subtitle_line_1: PKGamma 是一个位于台北与美国旧金山的创意数位机构。
+subtitle_line_1: PKGamma 是一个位于台北与美国芝加哥的创意数位机构。
 subtitle_line_2: 我们专精于网页设计、开发、电子商务解决方案、品牌塑造与数位行销。
 
 bottom_title: 在 PKGamma，我们对所有精彩与创新的好点子皆有兴趣，并会效率执行。
