--- a/tw.njk
+++ b/tw.njk
@@ -16,7 +16,7 @@ alt_language_url: https://pkgamma.com/en
 title_line_1: 我們透過創新設計
 title_line_2: 為中小企業創造超凡價值
 
-subtitle_line_1: PKGamma 是一個位於台北與美國舊金山的創意數位機構。
+subtitle_line_1: PKGamma 是一個位於台北與美國芝加哥的創意數位機構。
 subtitle_line_2: 我們專精於網頁設計、開發、電子商務解決方案、品牌塑造與數位行銷。
 
 bottom_title: 在 PKGamma，我們對所有精彩與創新的好點子皆有興趣，並會效率執行。
