updated thg link

--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -165,7 +165,7 @@
                     <!-- THIS IS ONE WORK BLOCK-->
                     <li class="col--xs--6 projectThumb">
                         <a
-                            href="http://thg.archive.pkgamma.com/">
+                            href="#">
                             <figure>
                                 <picture>
                                     <source
