fixed grammar and updated year

--- a/index.njk
+++ b/index.njk
@@ -19,7 +19,7 @@ title_line_2: through creative design.
 subtitle_line_1: PKGamma is a creative agency located in the City of Chicago.
 subtitle_line_2: We specialize in website design, development, e-commerce solutions, branding, and digital marketing.
 
-bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and of course, innovation.
+bottom_title: Here at PKGamma, we hold a passion for brilliant ideas, execution, and, of course, innovation.
 bottom_icon_1: Website Development
 bottom_icon_2: Branding
 bottom_icon_3: Digital Marketing
@@ -29,6 +29,6 @@ contact_subtitle: Please contact us if you would like to work together.
 email: contact@pkgamma.com
 phone: +1 (347) 766 4206
 
-copyright: © 2019 PKGamma Digital Agency. All rights reserved.
+copyright: © 2020 PKGamma Digital Agency. All rights reserved.
 copyright_disclaimer: Copyright & Disclaimer Statement.
 ---
