--- a/_includes/layouts/index.njk
+++ b/_includes/layouts/index.njk
@@ -202,7 +202,7 @@
                     <!-- THIS IS ONE WORK BLOCK-->
                     <!-- THIS IS ONE WORK BLOCK-->
                     <li class="col--xs--6 projectThumb">
-                        <a href="http://munual.org/">
+                        <a href="http://munual.philkuo.com/">
                             <figure>
                                 <picture>
                                     <source media="(min-width:
